# Homework_10

./: CMakeLists.txt
inc/: figure.h  function.h  game.h  main.h
src/: function.cpp  main.cpp
